fix: Ensure icon buttons don't inherit extra padding.
This is why we scope styles, angry face. 😵

--- a/themes/kelpie/sass/components/_icon-buttons.scss
+++ b/themes/kelpie/sass/components/_icon-buttons.scss
@@ -7,6 +7,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	padding: 0;
 
 	svg {
 		display: block;
