--- a/themes/kelpie/style.css
+++ b/themes/kelpie/style.css
@@ -2031,7 +2031,8 @@ body:not(.enable-search-modal) .kelpie-menu-bar {
   color: inherit;
   display: flex;
   flex-direction: column;
-  justify-content: center; }
+  justify-content: center;
+  padding: 0; }
   .kelpie-icon-button svg {
     display: block;
     z-index: 1; }
